# trading_bot

./: README.md  pyproject.toml
docs/: mt4_demo_bridge.md  trading_plan.md
examples/: run_mt4_bridge.py
src/trading_bot/: bot.py  config.py
src/trading_bot/data/: market_data.py
src/trading_bot/execution/: broker.py  executor.py  mt4_broker.py  paper_broker.py
src/trading_bot/features/: news.py  session.py
src/trading_bot/integrations/: __init__.py  mt4_bridge.py
src/trading_bot/risk/: controls.py
src/trading_bot/strategy/: smc.py
